fix grid item height on mobile version

--- a/src/Components/GridView/grid-view.module.scss
+++ b/src/Components/GridView/grid-view.module.scss
@@ -18,8 +18,9 @@
   }
 }
 .grid-item {
+  border: 1px solid #000;
   position: relative;
-  min-height: 427px;
+  min-height: 337px;
   animation: fade-in 500ms forwards ease-in-out;
   @media screen and (min-width: (breakpoint.$sm)) {
     flex: 1 0 38rem;
